        from <algorithm> library
     -- renamed the 'lc' prefix on all char-based string functions and replaced with
        'ut' to indicate utility and clearly avoid any ambiquity with legacy C functions
        such as 'strcpy', etc.  The prefix was changed to better indicate the nature
        of function (i.e., it's a utility)


--------------------------------------------------------------------------------
dafif library


--------------------------------------------------------------------------------
dis library


--------------------------------------------------------------------------------
glut library


--------------------------------------------------------------------------------
graphics library


--------------------------------------------------------------------------------
hla library

   -- added code to support HLA interface

--------------------------------------------------------------------------------
instruments library


--------------------------------------------------------------------------------
iodevice library


--------------------------------------------------------------------------------
linearsystem library



--------------------------------------------------------------------------------
maps library


--------------------------------------------------------------------------------
models library

   JSBSimModel class
      -- Added new slot parameter ('debugLevel') to set the debug level for JSBSim
         model instance. This controls the verbosity (i.e., output printed to console)
         of the model itself.  Slot parameter accepts an integer value.

--------------------------------------------------------------------------------
otw library


--------------------------------------------------------------------------------
recorder library


--------------------------------------------------------------------------------
simulation library

   Autopilot class