@@ -7,15 +7,6 @@
 #include "openeaagles/base/util/math_utils.h"
 #include "openeaagles/base/util/system.h"
 
-//------------------------------------------------------------------------------
-// Window/Linux specific code
-//------------------------------------------------------------------------------
-#if defined(WIN32)
-  #include "platform/Thread_msvc.cpp"
-#else
-  #include "platform/Thread_linux.cpp"
-#endif
-
 namespace oe {
 namespace base {
 
@@ -23,7 +14,7 @@ namespace base {
 // class Thread
 //==============================================================================
 
-IMPLEMENT_ABSTRACT_SUBCLASS(Thread,"Thread")
+IMPLEMENT_ABSTRACT_SUBCLASS(Thread, "Thread")
 EMPTY_SLOTTABLE(Thread)
 EMPTY_SERIALIZER(Thread)
 
@@ -152,7 +143,7 @@ void Thread::setTerminated()
 // class ThreadSingleTask
 //==============================================================================
 
-IMPLEMENT_ABSTRACT_SUBCLASS(ThreadSingleTask,"ThreadSingleTask")
+IMPLEMENT_ABSTRACT_SUBCLASS(ThreadSingleTask, "ThreadSingleTask")
 EMPTY_SLOTTABLE(ThreadSingleTask)
 EMPTY_SERIALIZER(ThreadSingleTask)
 
@@ -212,7 +203,7 @@ unsigned long ThreadSingleTask::mainThreadFunc()
 // class ThreadSyncTask
 //==============================================================================
 
-IMPLEMENT_ABSTRACT_SUBCLASS(ThreadSyncTask,"ThreadSyncTask")
+IMPLEMENT_ABSTRACT_SUBCLASS(ThreadSyncTask, "ThreadSyncTask")
 EMPTY_SLOTTABLE(ThreadSyncTask)
 EMPTY_SERIALIZER(ThreadSyncTask)
 
@@ -319,7 +310,7 @@ bool ThreadSyncTask::terminate()
 // class ThreadPeriodicTask
 //==============================================================================
 
-IMPLEMENT_ABSTRACT_SUBCLASS(ThreadPeriodicTask,"ThreadPeriodicTask")
+IMPLEMENT_ABSTRACT_SUBCLASS(ThreadPeriodicTask, "ThreadPeriodicTask")
 EMPTY_SLOTTABLE(ThreadPeriodicTask)
 EMPTY_SERIALIZER(ThreadPeriodicTask)
 
@@ -386,6 +377,6 @@ bool ThreadPeriodicTask::setVariableDeltaTimeFlag(const bool enable)
    return true;
 }
 
-} // End base namespace
-} // End oe namespace
+}
+}
 
